2006-02-26  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed potential crash introduced by the previous fix.

2006-02-25  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed brand-new bug preventing many egg types from correctly hatching.

2006-02-25    <jeff@mini.nerble.net>

	* objs/egg.cc (public): Rewrote so that each egg type has its own
	class. 

2006-02-13  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamemap.cc: Removing some old, unused code.
	* Makefile.common: Fixed wud compile problem under MinGW.

2006-02-20    <jeff@mini.nerble.net>

	* objs/egg.cc,etc:  Support shapes >= 1024 in monster eggs.

2006-02-19    <jeff@mini.nerble.net>

	* tools/wud.cc: Rewrote in C++.  Uses symbol table.
	* usecode/ucsymtbl.cc (Usecode_symbol_table): Support symbol-table
	in compiled usecode.
	* usecode/ucinternal.cc:  Print function names from symbol table.
	* usecode/compiler/ucmain.cc:  Write out symbol table.

2006-02-13  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* combat.cc, ready.h: Make missile weapons really use actual ammo.
	  Triple crossbows now fire magic bolts as they should. They also
	  spend the correct amount of ammo (3) per shot.
	* chunks.cc: Fixed a few dumb mistakes from previous commit.
	* objs/animate.cc: Fixed sound effects in SI, which I had broken
	  previously.

2006-02-12  Marzo Sette Torres Junior <marzojr@yahoo.com>
	Round 1 of de-hard-coding data from Exult.
	* actors.cc: Added support for custom BG-style gumps. Eliminated
	  the hard-coded data about which items get usecode ready/unready
	  events.
	* bggame.cc, sigame.cc: Two new resources in the respective flx
	  files.
	* cheat.cc, cheat_screen.cc: NPCs with mana should recover/be able
	* data/*/*: New de-hard-coded data, and mpdified flx.in files to
	  add them to the correct game flx file.
	* effects.cc: The association shape <> explosion sprite has been
	  moved out.
	* files/msgfile.cc: Lines starting with a ':' will be sequentially
	  auto-indexed.